--- a/roles/kafka_setup/tasks/main.yml
+++ b/roles/kafka_setup/tasks/main.yml
@@ -4,6 +4,12 @@
     url: https://archive.apache.org/dist/kafka/{{ kafka_version }}/kafka_{{ scala_version }}-{{ kafka_version }}.tgz
     dest: /tmp/
 
+- name: Create /opt/kafka directory
+  file:
+    path: /opt/kafka
+    state: directory
+    mode: "0755"
+
 - name: Untar the Kafka binaries on the target nodes
   unarchive:
     src: /tmp/kafka_{{ scala_version }}-{{ kafka_version }}.tgz
