--- a/roles/kafka_setup/tasks/main.yml
+++ b/roles/kafka_setup/tasks/main.yml
@@ -15,9 +15,6 @@
     src: /tmp/kafka_{{ scala_version }}-{{ kafka_version }}.tgz
     dest: /opt/kafka
 
-- name: Setup environment variables
-  shell: "export PATH=$PATH:/opt/kafka/kafka_{{ scala_version }}-{{ kafka_version }}/bin"
-
 - name: Setting up Kafka server properties
   lineinfile:
     path: /opt/kafka/kafka_{{ scala_version }}-{{ kafka_version }}/config/server.properties
@@ -26,12 +23,12 @@
 
 - name: Setting up Kafka server listeners
   lineinfile:
-    path: 
+    path: /opt/kafka/kafka_{{ scala_version }}-{{ kafka_version }}/config/server.properties
     regex: "^zookeeper.connect="
     line: zookeeper.connect={{ ansible_hostname }}:2181
 
 - name: Start Zookeeper server
-  shell: zookeeper-server-start.sh /opt/kafka/kafka_{{ scala_version }}-{{ kafka_version }}/config/zookeeper.properties &
+  shell: /opt/kafka/kafka_{{ scala_version }}-{{ kafka_version }}/bin/zookeeper-server-start.sh /opt/kafka/kafka_{{ scala_version }}-{{ kafka_version }}/config/zookeeper.properties &
 
 - name: Start Kafka server
-  shell: kafka-server-start.sh /opt/kafka/kafka_{{ scala_version }}-{{ kafka_version }}/config/server.properties &
+  shell: /opt/kafka/kafka_{{ scala_version }}-{{ kafka_version }}/bin/kafka-server-start.sh /opt/kafka/kafka_{{ scala_version }}-{{ kafka_version }}/config/server.properties &
